fix(frontend): table alignment

--- a/frontend/css/main.less
+++ b/frontend/css/main.less
@@ -7,7 +7,6 @@ table {
     td, th {
         padding: 0rem 1rem 0.7rem 0rem;
         vertical-align: top;
-        text-align: right;
     }
 }
 
